# tare-memory-plugin

./: .gitignore  CLAUDE.md  Cargo.toml  DECISIONS.md  README.md  justfile
.claude/agent-memory/tare/: phase0.md  phase2.md  phase4.md
crates/tare-aggregate/: Cargo.toml
crates/tare-aggregate/src/: lib.rs
crates/tare-collector/: Cargo.toml
crates/tare-collector/src/: attribution.rs  dhat_parser.rs  lib.rs
crates/tare-schema/: Cargo.toml
crates/tare-schema/src/: lib.rs
crates/tare-static/: Cargo.toml
crates/tare-static/src/: lib.rs  main.rs
crates/xtask/: Cargo.toml
crates/xtask/src/: main.rs
fixtures/: merged.json  runtime_only.json  static_only.json
plugin/: build.gradle.kts  gradlew  gradlew.bat  settings.gradle.kts
plugin/src/main/kotlin/dev/tare/plugin/: TareAnalyzeAction.kt  TareDataService.kt  TareInlayHintsProvider.kt  TareLineMarkerProvider.kt  TareModel.kt  TareProcessRunner.kt  TareRunConfiguration.kt  TareSettings.kt  TareSettingsConfigurable.kt  TareStartupActivity.kt
plugin/src/main/resources/messages/: TareBundle.properties
sample/: Cargo.toml
sample/benches/: alloc_bench.rs
sample/src/: lib.rs  main.rs
