[package]
name = "tare-collector"
version = "0.1.0"
edition.workspace = true
license.workspace = true
description = "Runtime tracking allocator + backtrace attribution"

[dependencies]
tare-schema = { path = "../tare-schema" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
blake3 = "1.8"
regex = "1"
