[package]
name = "tare-static"
version = "0.1.0"
edition.workspace = true
license.workspace = true
description = "syn-based allocation-site + type-size analyzer"

[[bin]]
name = "tare-static"
path = "src/main.rs"

[dependencies]
tare-schema = { path = "../tare-schema" }
syn = { version = "2", features = ["full", "visit"] }
proc-macro2 = { version = "1", features = ["span-locations"] }
blake3 = "1.8"
serde_json = "1"
walkdir = "2"
