[package]
name = "xtask"
version = "0.1.0"
edition.workspace = true
license.workspace = true
description = "cargo xtask orchestration: static / profile / all"

[dependencies]
tare-schema = { path = "../tare-schema" }
tare-aggregate = { path = "../tare-aggregate" }
tare-collector = { path = "../tare-collector" }
serde_json = "1"
blake3 = "1.8"
